--- a/BattleshipClient/mainwindow.ui
+++ b/BattleshipClient/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="loginPage">
      <widget class="QLabel" name="label_2">
@@ -134,7 +134,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>90</y>
+        <y>30</y>
         <width>171</width>
         <height>61</height>
        </rect>
@@ -173,6 +173,32 @@
       </property>
       <property name="itemAlignment">
        <set>Qt::AlignHCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnShowRank">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>120</y>
+        <width>171</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Show Rank</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnQuickMatch">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>210</y>
+        <width>171</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Quick Match</string>
       </property>
      </widget>
     </widget>
@@ -282,6 +308,29 @@
       </property>
       <property name="text">
        <string>OK</string>
+      </property>
+     </widget>
+     <widget class="QPlainTextEdit" name="chattxt">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>440</y>
+        <width>221</width>
+        <height>31</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listchat">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>131</y>
+        <width>221</width>
+        <height>301</height>
+       </rect>
+      </property>
+      <property name="spacing">
+       <number>5</number>
       </property>
      </widget>
     </widget>
