--- a/BattleshipClient/mainwindow.ui
+++ b/BattleshipClient/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="loginPage">
      <widget class="QLabel" name="label_2">
@@ -133,10 +133,10 @@
      <widget class="QPushButton" name="btnSignOut">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>30</y>
-        <width>171</width>
-        <height>61</height>
+        <x>20</x>
+        <y>290</y>
+        <width>150</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="text">
@@ -146,10 +146,10 @@
      <widget class="QPushButton" name="btnGetUsers">
       <property name="geometry">
        <rect>
-        <x>900</x>
-        <y>10</y>
-        <width>120</width>
-        <height>40</height>
+        <x>20</x>
+        <y>50</y>
+        <width>150</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="text">
@@ -159,7 +159,7 @@
      <widget class="QListWidget" name="listWidget">
       <property name="geometry">
        <rect>
-        <x>310</x>
+        <x>190</x>
         <y>10</y>
         <width>500</width>
         <height>500</height>
@@ -175,30 +175,111 @@
        <set>Qt::AlignHCenter</set>
       </property>
      </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>10</y>
+        <width>370</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: red;</string>
+      </property>
+      <property name="text">
+       <string>History</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="txtUsername">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>150</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: blue;</string>
+      </property>
+      <property name="text">
+       <string>Username</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::AutoText</enum>
+      </property>
+      <property name="scaledContents">
+       <bool>false</bool>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QListWidget" name="listWidgetHistory">
+      <property name="geometry">
+       <rect>
+        <x>710</x>
+        <y>40</y>
+        <width>370</width>
+        <height>470</height>
+       </rect>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::NoSelection</enum>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnQuickMatch">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>110</y>
+        <width>150</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Quick Match</string>
+      </property>
+     </widget>
      <widget class="QPushButton" name="btnShowRank">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>120</y>
-        <width>171</width>
-        <height>61</height>
+        <x>20</x>
+        <y>170</y>
+        <width>150</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="text">
        <string>Show Rank</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btnQuickMatch">
+     <widget class="QPushButton" name="btnPlayWithBot">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>210</y>
-        <width>171</width>
-        <height>61</height>
+        <x>20</x>
+        <y>230</y>
+        <width>150</width>
+        <height>30</height>
        </rect>
       </property>
       <property name="text">
-       <string>Quick Match</string>
+       <string>Play with bot</string>
       </property>
      </widget>
     </widget>
@@ -310,12 +391,73 @@
        <string>OK</string>
       </property>
      </widget>
+     <widget class="QLabel" name="txtMe">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>480</y>
+        <width>380</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: green;</string>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="txtEnemy">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>480</y>
+        <width>380</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: red;</string>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnSurrender">
+      <property name="geometry">
+       <rect>
+        <x>460</x>
+        <y>440</y>
+        <width>180</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Surrender</string>
+      </property>
+     </widget>
      <widget class="QPlainTextEdit" name="chattxt">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>440</y>
-        <width>221</width>
+        <x>420</x>
+        <y>399</y>
+        <width>261</width>
         <height>31</height>
        </rect>
       </property>
@@ -323,14 +465,159 @@
      <widget class="QListWidget" name="listchat">
       <property name="geometry">
        <rect>
-        <x>440</x>
-        <y>131</y>
-        <width>221</width>
-        <height>301</height>
+        <x>420</x>
+        <y>130</y>
+        <width>261</width>
+        <height>261</height>
        </rect>
       </property>
-      <property name="spacing">
-       <number>5</number>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="replayPage">
+     <widget class="QGraphicsView" name="player1View">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>90</y>
+        <width>380</width>
+        <height>380</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QGraphicsView" name="player2View">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>90</y>
+        <width>380</width>
+        <height>380</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QLabel" name="txtPlayer1">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>480</y>
+        <width>380</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: green;</string>
+      </property>
+      <property name="text">
+       <string>Player1's board</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QLabel" name="txtPlayer2">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>480</y>
+        <width>380</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: red;</string>
+      </property>
+      <property name="text">
+       <string>Player2's board</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnExit">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>430</y>
+        <width>220</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Exit</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnPrev">
+      <property name="geometry">
+       <rect>
+        <x>440</x>
+        <y>90</y>
+        <width>100</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Prev</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="btnNext">
+      <property name="geometry">
+       <rect>
+        <x>560</x>
+        <y>90</y>
+        <width>100</width>
+        <height>40</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>10</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Next</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="txtReplayStatus">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>20</y>
+        <width>480</width>
+        <height>30</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>11</pointsize>
+       </font>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: blue;</string>
+      </property>
+      <property name="text">
+       <string>Replay status</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </widget>
